cilium-cli/connectivity/builder/manifests/echo-ingress-icmp-zero.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-ingress-from-client2-icmp-zero
spec:
  description: "Allow only ICMP type zero"
  endpointSelector:
    matchLabels:
      kind: client
  ingress:
  - fromEndpoints:
    - matchLabels:
        other: client
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
    icmps:
    - fields:
      - family: IPv4
        type: 0
      - family: IPv6
        type: 0
